--- a/events/static/events/css/style.css
+++ b/events/static/events/css/style.css
@@ -76,10 +76,11 @@ span.select2-selection.select2-selection--single {
     font-family: "Open Sans";
     font-weight: 700;
     color: rgba(256,256,256,.2);
+    letter-spacing: 1px;
     -webkit-text-stroke: 2px white;
 }
 
-.schedule {
+.title {
     font-weight: 300;
     color: white!important;
     text-transform:uppercase;
@@ -148,4 +149,50 @@ hr {
 
 #new-employee span.select2.select2-container.select2-container--default {
     width:80%!important;
+}
+
+.form-control {
+    background-color:rgba(0,0,0,.3);
+    border:none;
+}
+
+
+.border-with-grad {
+  position: relative;
+  height: 25px;
+  width: 100px;
+  color: white;
+  /*line-height: 100px;*/
+  text-align: center;
+  letter-spacing: 1.5px;
+  display:inline-block;
+}
+.border-with-grad svg {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+}
+.border-with-grad path {
+  fill: transparent;
+  stroke: url(#border-gradient);
+  stroke-width: 9;
+}
+
+button.add-object {
+    border-radius: 500px;
+    width: 36px;
+    height: 36px;
+    color: white;
+    background-color: #c37f7f;
+    border: none;
+    font-size: .8em;
+    line-height: 4px;
+    margin-top: -10px;
+    margin-left: 2px;
+}
+
+button.add-object a {
+    margin-left:-1px;
 }
