--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -7,20 +7,13 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/events">Events<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/employees">Employees</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/locations">Locations</a>
-      </li>
-
+      <li class="nav-item"><a class="nav-link" href="/events">Events</a></li>
+      <li class="nav-item"><a class="nav-link" href="/employees">Employees</a></li>
+      <li class="nav-item"><a class="nav-link" href="/locations">Locations</a></li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
   </div>
