--- a/employees/templates/employees/employee_list.html
+++ b/employees/templates/employees/employee_list.html
@@ -42,16 +42,17 @@
             {% for employee in employees %}
             
               <tr>
-                <th scope="row"><button type="button" class="mx-2 btn btn-outline-dark btn-sm float-right" style='background-color:rgba(0,0,0,.1);color:black;'><strong>Edit</strong></button></th>
+                <th scope="row"><img style='height:20px; width:20px;' src='{% static "events/img/edit.svg" %}' alt="Edit Symbol"/></th>
                 <td>{{employee.employee_id}}</td>
                 <td class='.first_name'>{{employee.first_name}}</td>
                 <td>{{employee.last_name}}</td>
                 <td>{{employee.phone}}</td>
-                <td>{% if employee.food_permit %}<img style='height:20px; width:20px;' src='{% static "events/img/true.svg" %}' alt="Checkmark"/></a>{% else %}<img style='height:20px; width:20px;' src='{% static "events/img/false.svg" %}' alt="Checkmark"/></a>{% endif %}</td>
-                <td>{% if employee.alcohol_permit %}<img style='height:20px; width:20px;' src='{% static "events/img/true.svg" %}' alt="Checkmark"/></a>{% else %}<img style='height:20px; width:20px;' src='{% static "events/img/false.svg" %}' alt="Checkmark"/></a>{% endif %}</td>
-                <td>{% if employee.admin %}<img style='height:20px; width:20px;' src='{% static "events/img/true.svg" %}' alt="Checkmark"/></a>{% else %}<img style='height:20px; width:20px;' src='{% static "events/img/false.svg" %}' alt="Checkmark"/></a>{% endif %}</td>
-                <td>{% if employee.active %}<img style='height:20px; width:20px;' src='{% static "events/img/true.svg" %}' alt="Checkmark"/></a>{% else %}<img style='height:20px; width:20px;' src='{% static "events/img/false.svg" %}' alt="Checkmark"/></a>{% endif %}</td>
+                <td>{% if employee.food_permit %}<img style='height:20px; width:20px;' src='{% static "events/img/check.svg" %}' alt="Checkmark Symbol"/></a>{% else %}<img style='height:20px; width:20px;' src='{% static "events/img/cancel.svg" %}' alt="Cancel Symbol"/></a>{% endif %}</td>
+                <td>{% if employee.alcohol_permit %}<img style='height:20px; width:20px;' src='{% static "events/img/check.svg" %}' alt="Checkmark Symbol"/></a>{% else %}<img style='height:20px; width:20px;' src='{% static "events/img/cancel.svg" %}' alt="Cancel Symbol"/></a>{% endif %}</td>
+                <td>{% if employee.admin %}<img style='height:20px; width:20px;' src='{% static "events/img/check.svg" %}' alt="Checkmark Symbol"/></a>{% else %}<img style='height:20px; width:20px;' src='{% static "events/img/cancel.svg" %}' alt="Cancel Symbol"/></a>{% endif %}</td>
+                <td>{% if employee.active %}<img style='height:20px; width:20px;' src='{% static "events/img/check.svg" %}' alt="Checkmark Symbol"/></a>{% else %}<img style='height:20px; width:20px;' src='{% static "events/img/cancel.svg" %}' alt="Cancel Symbol"/></a>{% endif %}</td>
               </tr>
+              
             {% endfor %}
 
             </table>
