--- a/static/events/css/style.css
+++ b/static/events/css/style.css
@@ -76,6 +76,7 @@ span.select2-selection.select2-selection--single {
     font-family: "Open Sans";
     font-weight: 700;
     color: rgba(256,256,256,.2);
+    letter-spacing: 1px;
     -webkit-text-stroke: 2px white;
 }
 
@@ -150,14 +151,21 @@ hr {
     width:80%!important;
 }
 
+.form-control {
+    background-color:rgba(0,0,0,.3);
+    border:none;
+}
+
+
 .border-with-grad {
   position: relative;
-  height: 100px;
-  width: 250px;
+  height: 25px;
+  width: 100px;
   color: white;
-  line-height: 100px;
+  /*line-height: 100px;*/
   text-align: center;
   letter-spacing: 1.5px;
+  display:inline-block;
 }
 .border-with-grad svg {
   position: absolute;
@@ -169,5 +177,34 @@ hr {
 .border-with-grad path {
   fill: transparent;
   stroke: url(#border-gradient);
-  stroke-width: 4;
+  stroke-width: 9;
+}
+
+button.add-object {
+    border-radius: 500px;
+    width: 36px;
+    height: 36px;
+    color: white;
+    background-color: #c37f7f;
+    border: none;
+    font-size: .8em;
+    line-height: 4px;
+    margin-top: -10px;
+    margin-left: 2px;
+}
+
+button.add-object a {
+    margin-left:-1px;
+}
+
+.table-header {
+    text-transform: uppercase;
+    font-weight: 700;
+    color: white!important;
+    letter-spacing: 1px;
+}
+
+.event-row {
+    background-color: rgba(256,256,256,.1);
+    border-radius: 8px;
 }
