--- a/static/events/css/style.css
+++ b/static/events/css/style.css
@@ -208,3 +208,18 @@ button.add-object a {
     background-color: rgba(256,256,256,.1);
     border-radius: 8px;
 }
+
+body.modal-open .background-container {
+    -webkit-filter: blur(4px);
+    -moz-filter: blur(4px);
+    -o-filter: blur(4px);
+    -ms-filter: blur(4px);
+    filter: blur(4px);
+    filter: url("https://gist.githubusercontent.com/amitabhaghosh197/b7865b409e835b5a43b5/raw/1a255b551091924971e7dee8935fd38a7fdf7311/blur".svg#blur);
+    filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='4');
+}
+
+.model-content {
+    background: linear-gradient(to top right, rgba(124,76,125,.5), rgba(170,101,118,.5),rgba(170,101,118,.5),rgba(231,174,143,.5));
+    color: white;
+}
