--- a/events/static/events/css/style.css
+++ b/events/static/events/css/style.css
@@ -208,3 +208,26 @@ button.add-object a {
     background-color: rgba(256,256,256,.1);
     border-radius: 8px;
 }
+.modal-content {
+    background: linear-gradient(to top right, rgba(124,76,125,.7), rgba(170,101,118,.7),rgba(170,101,118,.7),rgba(231,174,143,.7))!important;
+    background: linear-gradient(to right,rgba(195, 127, 143, 0.7),rgba(136, 86, 125, 0.7));
+    color: white;
+}
+
+.modal-title {
+    font-weight: 300;
+    color: white!important;
+    text-transform:uppercase;
+    font-size:2em;
+}
+
+body.modal-open .background-container {
+    -webkit-filter: blur(4px);
+    -moz-filter: blur(4px);
+    -o-filter: blur(4px);
+    -ms-filter: blur(4px);
+    filter: blur(4px);
+    filter: url("https://gist.githubusercontent.com/amitabhaghosh197/b7865b409e835b5a43b5/raw/1a255b551091924971e7dee8935fd38a7fdf7311/blur".svg#blur);
+    filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='4');
+}
+
