--- a/templates/create_object.html
+++ b/templates/create_object.html
@@ -1,19 +1,37 @@
+{% load staticfiles %}
+{% load widget_tweaks %}
+
 <form method="POST" class="post-form">{% csrf_token %}
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+  <div class="modal fade" id="newObject" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Add New {{object_name}}</h5>
+        <div class="modal-body">
+          
+          <h5 class="modal-title mb-2 pl-1" id="exampleModalLabel">Add New {{object_name}}
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
-        </div>
-        <div class="modal-body">
-          {{ form.as_p }}
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-          <button type="submit" class="save btn btn-default">Add {{object_name}}</button>
+          </h5>
+          <hr />
+          
+          <form>
+            <div class='form-fields ml-4'>
+          {% for field in form.visible_fields %}
+          {% if field.name != 'event_id' and field.name != 'slug' %}
+          <div class='form-inline mb-3'>  
+            <div class="form-group">
+              <a class='font-weight-bold text-capitalize'>{{ field.label_tag }}</a> {% render_field field class="form-control ml-2" %}
+            </div>
+          </div>
+          {% endif %}
+          {% endfor %}
+          </div>
+          </form>
+          <hr />
+          
+          <button type="submit" class="save btn btn-dark float-right ml-2">Add {{object_name}}</button>
+          <button type="button" class="btn btn-dark float-right" data-dismiss="modal">Cancel</button>
+
         </div>
       </div>
     </div>
