--- a/events/templates/events/table.html
+++ b/events/templates/events/table.html
@@ -5,7 +5,10 @@
     <tr class='header' style='text-align:center;'>
       <th scope="col"></th>
       <!--<th style="text-align:left;" scope="col">ID</th>-->
-      <th style="text-align:left;" scope="col">Title</th>
+      <th style="text-align:left;" scope="col">
+          <img style='height:20px; width:20px;vertical-align:text-top' src='{% static "events/img/search.svg" %}' alt="Magnifying Glass Icon" />
+          <input type="text" class="form-control" id="searchInput" onkeyup="myFunction()" placeholder="Event" style="width:90%;display:inline-block;padding-left:3px;" />
+      </th>
       <th style="text-align:left;" scope="col">Date</th>
       <th scope="col">Doors Open</th>
       <th scope="col">Scheduled</th>
