--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -10,28 +10,37 @@
   
     
 
-  <div class='card shadow' style='border-radius:8px;'>
+  <div class='card custom-shadow' style='border-radius:8px;'>
     <div class='card-body mx-4 align-center'>
       <div class='row'>
         <div class='col col-12'>
           <h2>
             <span class='title'>Events</span>
             <button type="button" class="btn add-object" data-toggle="modal" data-target="#newObject"><a>+</a></button>
-            <button type="button" class="mx-2 btn btn-dark float-right">Export All</button>
+            <div class='export-button float-right'><img src='{% static "events/img/export.svg" %}' alt="Export Icon" /></div>
           </h2>
         </div>
       </div>
+      <hr />
       <div class='row'>
         <div class='col col-12'>
         
         
         {% for expired in event_list %}
             {% if expired.grouper|stringformat:'s' == 'False' %}
-            <div class='event-row pt-3 px-3 pb-1 mb-4'><a class='table-header'>Upcoming Events</a>
+            <div class='event-row py-3 px-3 mb-4'><a class='table-header'>Upcoming Events</a>
               {% include 'events/table.html' with events=expired.list %}
             </div>
             {% else %}
-            <div class='event-row pt-3 px-3 pb-1 mb-3'><a class='table-header'>Previous Events</a>
+            <div class='event-row py-3 px-3 mb-3'>
+              <a class='table-header' style="display:inline-block;">
+                Previous Events
+                <img style='height:20px; width:20px; display:inline-block; margin-left:2px; margin-right:2px;' src='{% static "events/img/down-chevron.svg" %}' alt="Down Chevron Icon"/>
+              
+              </a>
+              
+            
+            
               {% include 'events/table.html' with events=expired.list %}
             </div>
             {% endif %}
