--- a/events/templates/events/table.html
+++ b/events/templates/events/table.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<table class="table table-striped table-hover" id='eventTable'>
+<table class="table table-sm table-striped table-hover" id='eventTable'>
   <thead>
     <tr class='header' style='text-align:center;'>
       <th scope="col"></th>
