Monster front-end refactor

--- a/events/templates/events/detail/location_card.html
+++ b/events/templates/events/detail/location_card.html
@@ -24,7 +24,7 @@
               {{all_employees}}
             {% endautoescape %}
           </select>
-          {% include 'events/add_row.html' with loc=location.location_id %}
+          {% include 'events/detail/add_row.html' with loc=location.location_id %}
           <br />
         </div>
       </div>
