--- a/employees/templates/employees/employee_list.html
+++ b/employees/templates/employees/employee_list.html
@@ -1,66 +1,35 @@
-{% extends "base/base.html" %}
 {% load staticfiles %}
-{% block content %} 
-{% include 'create_object.html' with object_name='Employee' %}
 
-<div class="container">
+<table class="table table-striped table-hover" id='myTable'>
+  
+  <thead>
+    <tr class='header'>
+      <th scope="col"></th>
+      <th scope="col">ID</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Phone</th>
+      <th scope="col">Food</th>
+      <th scope="col">Alcohol</th>
+      <th scope="col">Admin</th>
+      <th scope="col">Active</th>
+    </tr>
+  </thead>
+  
+  <tbody>
+  {% for employee in employees %}
+    <tr>
+      <th scope="row"><img class='icon-edit' src='{% static "events/img/edit.svg" %}' alt="Edit Icon"/></th>
+      <td>{{employee.employee_id}}</td>
+      <td>{{employee.first_name}}</td>
+      <td>{{employee.last_name}}</td>
+      <td>{{employee.phone}}</td>
+      <td>{% include 'base/boolean.html' with bool=employee.food_permit %}</td>
+      <td>{% include 'base/boolean.html' with bool=employee.alcohol_permit %}</td>
+      <td>{% include 'base/boolean.html' with bool=employee.admin %}</td>
+      <td>{% include 'base/boolean.html' with bool=employee.active %}</td>
+    </tr>
+  {% endfor %}
+  </tbody>
 
-  <div class='card shadow' style='border-radius:8px;'>
-    <div class='card-body mx-4 align-center'>
-      <div class='row'>
-        <div class='col col-12'>
-          <h2>
-            <span class='title'>Employees</span>
-            <button type="button" class="btn add-object" data-toggle="modal" data-target="#exampleModal"><a>+</a></button>
-            <button type="button" class="mx-2 btn btn-outline-dark float-right">Export All</button>
-            <input type="text" class="form-control float-right" id="myInput" onkeyup="myFunction()" placeholder="Search for Employee..." style="width:25%;">
-          </h2>
-        </div>
-      </div>
-      <div class='row'>
-        <div class='col col-12'>
-
-          
-          
-          <table class="table table-striped table-hover" id='myTable'>
-            <thead>
-              <tr class='header'>
-                <th scope="col"></th>
-                <th scope="col">ID</th>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
-                <th scope="col">Phone</th>
-                <th scope="col">Food</th>
-                <th scope="col">Alcohol</th>
-                <th scope="col">Admin</th>
-                <th scope="col">Active</th>
-              </tr>
-
-            </thead>
-            <tbody>
-
-            {% for employee in employees %}
-            
-              <tr>
-                <th scope="row"><img style='height:20px; width:20px;' src='{% static "events/img/edit.svg" %}' alt="Edit Symbol"/></th>
-                <td>{{employee.employee_id}}</td>
-                <td class='.first_name'>{{employee.first_name}}</td>
-                <td>{{employee.last_name}}</td>
-                <td>{{employee.phone}}</td>
-                <td>{% if employee.food_permit %}<img style='height:20px; width:20px;' src='{% static "events/img/check.svg" %}' alt="Checkmark Symbol"/></a>{% else %}<img style='height:20px; width:20px;' src='{% static "events/img/cancel.svg" %}' alt="Cancel Symbol"/></a>{% endif %}</td>
-                <td>{% if employee.alcohol_permit %}<img style='height:20px; width:20px;' src='{% static "events/img/check.svg" %}' alt="Checkmark Symbol"/></a>{% else %}<img style='height:20px; width:20px;' src='{% static "events/img/cancel.svg" %}' alt="Cancel Symbol"/></a>{% endif %}</td>
-                <td>{% if employee.admin %}<img style='height:20px; width:20px;' src='{% static "events/img/check.svg" %}' alt="Checkmark Symbol"/></a>{% else %}<img style='height:20px; width:20px;' src='{% static "events/img/cancel.svg" %}' alt="Cancel Symbol"/></a>{% endif %}</td>
-                <td>{% if employee.active %}<img style='height:20px; width:20px;' src='{% static "events/img/check.svg" %}' alt="Checkmark Symbol"/></a>{% else %}<img style='height:20px; width:20px;' src='{% static "events/img/cancel.svg" %}' alt="Cancel Symbol"/></a>{% endif %}</td>
-              </tr>
-              
-            {% endfor %}
-
-            </table>
-        </div>
-      </div>
-      <hr />
-      
-    </div>
-  </div>
-</div>
-{% endblock %}
+</table>
