--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -4,7 +4,7 @@
 
 <div class="container">
 
-  {% include 'events/event_header.html' %}
+  {% include 'events/detail/event_header.html' %}
   
   <div class='card custom-shadow' style='border-radius:8px;'>
     <div class='card-body mx-auto align-center'>
@@ -25,7 +25,7 @@
         <div class='col col-12'>
           <div class='card-columns'>
           {% for location in locations %}
-            {% include 'events/location_card.html' with loc=location.location_id %}
+            {% include 'events/detail/location_card.html' with loc=location.location_id %}
           {% endfor %}
           </div>
           <hr />
