--- a/events/templates/events/table.html
+++ b/events/templates/events/table.html
@@ -1,37 +1,36 @@
 {% load staticfiles %}
 
 <table class="table table-sm table-striped table-hover" id='eventTable'>
+  
   <thead>
     <tr class='header' style='text-align:center;'>
       <th scope="col"></th>
-      <!--<th style="text-align:left;" scope="col">ID</th>-->
       <th style="text-align:left;" scope="col">
-          <img style='height:20px; width:20px;vertical-align:text-top' src='{% static "events/img/search.svg" %}' alt="Magnifying Glass Icon" />
+          <img class='icon-search' src='{% static "events/img/search.svg" %}' alt="Search" />
           <input type="text" class="form-control" id="searchInput" onkeyup="myFunction()" placeholder="Event" style="width:90%;display:inline-block;padding-left:3px;" />
       </th>
       <th style="text-align:left;" scope="col">Date</th>
       <th scope="col">Doors Open</th>
       <th scope="col">Scheduled</th>
       <th scope="col">Alcohol</th>
-      <th scope="col">Expired</th>
     </tr>
-</thead>
+  </thead>
+  
+  <tbody>
+  {% for event in events %}
+    <tr>
+      <th scope="row">
+        <button type="button" class="btn edit-object" data-toggle="modal" data-target="#editObject" id={{event.slug}}>
+          <img class='icon-edit 'src='{% static "events/img/edit.svg" %}' alt="Edit Icon"/>
+        </button>
+      </th>
+      <td><a href='/events/{{event.date|date:"Y/m/d/"}}{{event.slug}}' style='color:white;font-weight:600;'>{{event}}</a><br /></td>
+      <td>{{event.date}}</td>
+      <td style="text-align:center;">{{event.doors_open}}</td>
+      <td style="text-align:center;">0</td>
+      <td style="text-align:center;">{% include 'base/boolean.html' with bool=event.alcohol %}</td>
+    </tr>
+  {% endfor %}
+  </tbody>
 
-<tbody>
-{% for event in events %}
-  <tr>
-    <th scope="row">
-      <button type="button" class="btn edit-object" data-toggle="modal" data-target="#editObject" id={{event.slug}}>
-        <img style='height:20px; width:20px;' src='{% static "events/img/edit.svg" %}' alt="Edit Symbol"/>
-      </button>
-    </th>
-    <!--<td>{{event.event_id}}</td>-->
-    <td><a href='/events/{{event.date|date:"Y/m/d/"}}{{event.slug}}' style='color:white;font-weight:600;'>{{event}}</a><br /></td>
-    <td>{{event.date}}</td>
-    <td style="text-align:center;">{{event.doors_open}}</td>
-    <td style="text-align:center;">0</td>
-    <td style="text-align:center;"><img style='height:20px; width:20px;' src='{% static "events/img/check.svg" %}' alt="Checkmark Symbol"/></td>
-    <td style="text-align:center;"><img style='height:20px; width:20px;' src='{% static "events/img/cancel.svg" %}' alt="Cancel Symbol"/></td>
-  </tr>
-{% endfor %}
 </table>
