--- a/locations/templates/locations/location_list.html
+++ b/locations/templates/locations/location_list.html
@@ -1,107 +1,26 @@
-{% extends "base/base.html" %}
 {% load staticfiles %}
-{% block content %}  
-{% include 'create_object.html' with object_name='Location' %}
 
-<div class="container">
+<table class="table table-striped table-hover" id='locationTable'>
   
-  <div class='card shadow' style='border-radius:8px;'>
-    <div class='card-body mx-4 align-center'>
-      <div class='row'>
-        <div class='col col-12'>
-          <h2>
-            <span class='title'>Locations</span>
-            <button type="button" class="btn add-object" data-toggle="modal" data-target="#exampleModal"><a>+</a></button>
-            <button type="button" class="mx-2 btn btn-dark float-right">Export</button>
-            <input type="text" class="form-control float-right" id="locationSearch" onkeyup="myFunction()" placeholder="Search for Location..." style="width:25%;">
-          </h2>
-        </div>
-      </div>
-      <div class='row'>
-        <div class='col col-12'>
-
-          
-          
-          <table class="table table-striped table-hover" id='locationTable'>
-            <thead>
-              <tr class='header'>
-                <th scope="col"></th>
-                <th scope="col">ID</th>
-                <th scope="col">Name</th>
-                <th scope="col">Bar</th>
-                <th scope="col">Default Positions</th>
-              </tr>
-
-            </thead>
-            <tbody>
-
-            {% for location in locations %}
-            
-              <tr>
-                <th scope="row"><img style='height:20px; width:20px;' src='{% static "events/img/edit.svg" %}' alt="Edit Symbol"/></th>
-                <td>{{location.location_id}}</td>
-                <td>{{location.title}}</td>
-                <td>{% if location.bar %}<img style='height:20px; width:20px;' src='{% static "events/img/check.svg" %}' alt="Checkmark Symbol"/></a>{% else %}<img style='height:20px; width:20px;' src='{% static "events/img/cancel.svg" %}' alt="Cancel Symbol"/></a>{% endif %}</td>
-                <td>
-                  
-                {% regroup location.position_set.all by code.0 as position_list %}
-                
-                {% for position in location.position_set.all %}
-                  {% with position=position|stringformat:"s" %}
-                    {% if 'Manager' in position or 'Prep Lead' in position %}
-                      <a href="#" class="badge badge-success">{{position}}</a><br/>
-                    {% endif %}
-                  {% endwith %}
-                {% endfor %}
-                
-                  
-                
-                
-                {% for group, roles in position_list %}
-                  {% if group in 'MPCB' %}
-                    {% if group == 'P' %}
-                      {% for role in roles %}
-                        {% if role|stringformat:"s" != 'Prep Lead' %}
-                          <a href="#" class="badge badge-danger">{{role}}</a>
-                        {% endif %}
-                      {% endfor %}
-                      <br/>
-                    {% endif %}
-                    {% if group == 'C' %}
-                      {% for role in roles %}
-                        <a href="#" class="badge badge-primary">{{role}}</a>
-                      {% endfor %}
-                      <br/>
-                    {% endif %}
-                    {% if group == 'B' %}
-                      {% for role in roles %}
-                        <a href="#" class="badge badge-secondary">{{role}}</a>
-                      {% endfor %}
-                      <br/>
-                    {% endif %}
-                  {% else %}
-                    {% for role in roles %}
-                      <a href="#" class="badge badge-dark">{{role}}</a>
-                    {% endfor %}
-                    <br/>
-                  {% endif %}
-                {% endfor %}
-                    
-
-    
-                    
-            
-            
-                </td>
-              </tr>
-            {% endfor %}
-
-            </table>
-        </div>
-      </div>
-      <hr />
-      
-    </div>
-  </div>
-</div>
-{% endblock %}
+  <thead>
+    <tr class='header'>
+      <th scope="col"></th>
+      <th scope="col">ID</th>
+      <th scope="col">Name</th>
+      <th scope="col">Bar</th>
+      <th scope="col">Default Positions</th>
+    </tr>
+  </thead>
+  
+  <tbody>
+  {% for location in locations %}
+    <tr>
+      <th scope="row"><img class='icon-edit' src='{% static "events/img/edit.svg" %}' alt="Edit Icon"/></th>
+      <td>{{location.location_id}}</td>
+      <td>{{location.title}}</td>
+      <td>{% include 'base/boolean.html' with bool=location.bar %}</td>
+      <td>0</td>
+    </tr>
+  {% endfor %}
+</tbody>
+</table>
