--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -7,9 +7,11 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+      <li class="nav-item"><a class="nav-link" href="/company/profile">Profile</a></li>
       <li class="nav-item"><a class="nav-link" href="/events">Events</a></li>
       <li class="nav-item"><a class="nav-link" href="/employees">Employees</a></li>
       <li class="nav-item"><a class="nav-link" href="/locations">Locations</a></li>
+      <li class="nav-item"><a class="nav-link" href="/features/sms-text">SMS Text</a></li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
