--- a/events/static/events/css/style.css
+++ b/events/static/events/css/style.css
@@ -8,6 +8,7 @@ body {
 hr { background-color:white; margin: 0px; margin-bottom:24px!important;}
 th { color:#1b142d; vertical-align:middle!important; text-align:center;}
 td { vertical-align:middle!important;}
+td > a { color:white; font-weight:600;}
 
 .navbar { margin-bottom:30px!important; }
 
@@ -43,30 +44,9 @@ td { vertical-align:middle!important;}
 	padding-left: 8px;
     padding-right: 8px;
 }
+.schedule-btn:hover span {background: transparent;}
 
-.schedule-btn:hover span {
-	background: transparent;
-}
-
-span.select2-selection.select2-selection--single {
-    background-color: rgba(256,256,256,.3);
-}
-
-.select2-container--default .select2-selection--single .select2-selection__placeholder {
-    color:black;
-}
-
-.input-group-text {
-    background-color: rgba(256,256,256,.4);
-}
-.event-title {
-    font-size: 4em;
-    font-family: "Open Sans";
-    font-weight: 700;
-    color: rgba(256,256,256,.2);
-    letter-spacing: 1px;
-    -webkit-text-stroke: 2px white;
-}
+.input-group-text {background-color: rgba(256,256,256,.4);}
 
 .title {
     font-weight: 300;
@@ -100,35 +80,14 @@ span.select2-selection.select2-selection--single {
 .select2-container .select2-selection--single {height:2.5rem;}    
 .select2-container--default .select2-selection--single .select2-selection__arrow {height:37px;}
 .select2-container--default .select2-selection--single .select2-selection__rendered {padding-top:5px;}
-#new-employee span.select2.select2-container.select2-container--default {width:80%!important;}
+.select2-container--default .select2-selection--single .select2-selection__placeholder {color:black;}
+.select2.select2-container.select2-container--default {width:80%!important;}
+.select2-selection.select2-selection--single {background-color: rgba(256,256,256,.3);}
 
 .form-control {
     background-color:rgba(0,0,0,.3);
     border:none;
     color:white;
-}
-
-.border-with-grad {
-  position: relative;
-  height: 25px;
-  width: 100px;
-  color: white;
-  /*line-height: 100px;*/
-  text-align: center;
-  letter-spacing: 1.5px;
-  display:inline-block;
-}
-.border-with-grad svg {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  height: 100%;
-  width: 100%;
-}
-.border-with-grad path {
-  fill: transparent;
-  stroke: url(#border-gradient);
-  stroke-width: 9;
 }
 
 button.add-object {
@@ -161,12 +120,20 @@ button.add-object {
     background-color: rgba(256,256,256,.1);
     border-radius: 8px;
 }
+.event-title {
+    font-size: 4em;
+    font-family: "Open Sans";
+    font-weight: 700;
+    color: rgba(256,256,256,.2);
+    letter-spacing: 1px;
+    -webkit-text-stroke: 2px white;
+}
+
 .modal-content {
     background: linear-gradient(to top right, rgba(124,76,125,.7), rgba(170,101,118,.7),rgba(170,101,118,.7),rgba(231,174,143,.7))!important;
     background: linear-gradient(to right,rgba(195, 127, 143, 0.7),rgba(136, 86, 125, 0.7));
     color: white;
 }
-
 .modal-title {
     font-weight: 300;
     color: white!important;
@@ -174,22 +141,22 @@ button.add-object {
     font-size:2em;
 }
 
-body.modal-open .background-container {
-    -webkit-filter: blur(4px);
-    -moz-filter: blur(4px);
-    -o-filter: blur(4px);
-    -ms-filter: blur(4px);
-    filter: blur(4px);
-    filter: url("https://gist.githubusercontent.com/amitabhaghosh197/b7865b409e835b5a43b5/raw/1a255b551091924971e7dee8935fd38a7fdf7311/blur".svg#blur);
-    filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='4');
-}
+/*body.modal-open .background-container {*/
+/*    -webkit-filter: blur(4px);*/
+/*    -moz-filter: blur(4px);*/
+/*    -o-filter: blur(4px);*/
+/*    -ms-filter: blur(4px);*/
+/*    filter: blur(4px);*/
+/*    filter: url("https://gist.githubusercontent.com/amitabhaghosh197/b7865b409e835b5a43b5/raw/1a255b551091924971e7dee8935fd38a7fdf7311/blur".svg#blur);*/
+/*    filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='4');*/
+/*}*/
 
 #searchInput {color: black; font-weight: 700; background: rgba(0,0,0,0);}
 #searchInput::placeholder {color: black; opacity: 1;} /* Chrome, Firefox, Opera, Safari 10.1+ */
 #searchInput:-ms-input-placeholder { color: black; } /* Internet Explorer 10-11 */
 #searchInput::-ms-input-placeholder { color: black; } /* Microsoft Edge */
 
-.edit-object {
+.js-update-object {
     background: none;
     text-align: center;
 }
