--- a/templates/objects/create.html
+++ b/templates/objects/create.html
@@ -1,16 +1,19 @@
-<form method="post" action="{% url 'event_create' %}" class="js-book-create-form">
+{% load widget_tweaks %}
+
+<form method="post" action="{% url obj|add:'_create' %}" class="js-object-create-form">
   {% csrf_token %}
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
-    <h4 class="modal-title">Create a new event</h4>
+    <h4 class="modal-title">Create {{obj}}</h4>
   </div>
   <div class="modal-body">
-    {% include 'events/create/partial_event_form.html' %}
+    {% include 'objects/form.html' %}
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-    <button type="submit" class="btn btn-primary">Create event</button>
+    <button type="submit" class="btn btn-primary">Create {{obj}}</button>
   </div>
 </form>
+
