--- a/templates/objects/update.html
+++ b/templates/objects/update.html
@@ -1,16 +1,18 @@
-<form method="post" action="{% url 'event_update' form.instance.pk %}" class="js-book-update-form">
+{% load widget_tweaks %}
+
+<form method="post" action="{% url obj|add:'_update' form.instance.pk %}" class="js-object-update-object">
   {% csrf_token %}
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
-    <h4 class="modal-title">Update event</h4>
+    <h4 class="modal-title">Update {{obj}}</h4>
   </div>
   <div class="modal-body">
-    {% include 'events/create/partial_event_form.html' %}
+    {% include 'objects/form.html' %}
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-    <button type="submit" class="btn btn-primary">Update event</button>
+    <button type="submit" class="btn btn-primary">Update {{obj}}</button>
   </div>
 </form>
