--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href="{% static 'events/css/style.css' %}" />
     </head>
     
-    <body style='font-family:open sans;'>
+    <body>
       
       {% include 'base/navbar.html' %}
       {% block content %}{% endblock %}
