--- a/templates/objects/list.html
+++ b/templates/objects/list.html
@@ -2,8 +2,6 @@
 {% load staticfiles %}
 {% block content %}
 
-{% load staticfiles %}
-
 <div class="container background-container">  
   <div class='card shadow-custom'>
     <div class='card-body mx-4 align-center'>
@@ -12,19 +10,22 @@
           
           <h2>
             <span class='title'>{{objs}}</span>
-            <button type="button" class="btn add-object js-create-object" data-url="{% url obj|add:'_create' %}"><a>+</a></button>
+            <button type="button" class="btn add-object js-create-object" data-url="{% url 'event_create' %}"><a>+</a></button>
             <div class='icon-export'><img src='{% static "events/img/export.svg" %}' alt="Export Icon" /></div>
           </h2>
+
+          {% include 'events/table.html' %}
           
-            {% include objs|add:'/table_head.html' %}
-            {% include objs|add:'/table_body.html' %}
-          </table>
-          
-          <div class="modal fade" id="modal-object" role="dialog">
-            <div class="modal-dialog">
-              <div class="modal-content"></div>
+
+            <div class="modal fade" id="modal-object" tabindex="-1" role="dialog">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content"></div>
+              </div>
             </div>
-          </div>
+            
+            
+            
+            
           
         </div>
       </div>
