--- a/templates/objects/update.html
+++ b/templates/objects/update.html
@@ -1,6 +1,4 @@
-{% load widget_tweaks %}
-
-<form method="post" action="{% url obj|add:'_update' form.instance.pk %}" class="js-object-update-object">
+<form method="post" action="{% url obj|add:'_update' form.instance.pk %}" class="js-object-update-form">
   {% csrf_token %}
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
