--- a/templates/objects/list.html
+++ b/templates/objects/list.html
@@ -2,6 +2,8 @@
 {% load staticfiles %}
 {% block content %}
 
+
+
 <div class="container background-container">  
   <div class='card shadow-custom'>
     <div class='card-body mx-4 align-center'>
@@ -13,20 +15,9 @@
             <button type="button" class="btn add-object js-create-object" data-url="{% url 'event_create' %}"><a>+</a></button>
             <div class='icon-export'><img src='{% static "events/img/export.svg" %}' alt="Export Icon" /></div>
           </h2>
+          {% include 'objects/modal.html' %}
+          {% include 'events/event_list.html' %}
 
-          {% include 'events/table.html' %}
-          
-
-            <div class="modal fade" id="modal-object" tabindex="-1" role="dialog">
-              <div class="modal-dialog" role="document">
-                <div class="modal-content"></div>
-              </div>
-            </div>
-            
-            
-            
-            
-          
         </div>
       </div>
     </div>
