--- a/templates/objects/update.html
+++ b/templates/objects/update.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <form method="post" action="{% url obj|add:'_update' form.instance.pk %}" class="js-object-update-form">
   {% csrf_token %}
   <div class="modal-header">
