--- a/templates/objects/delete.html
+++ b/templates/objects/delete.html
@@ -1,19 +1,18 @@
 {% load staticfiles %}
 
-<form method="post" action="{% url obj|add:'_update' form.instance.pk %}" class="js-object-update-form">
+<form method="post" action="{% url obj|add:'_delete' event.id %}" class="js-object-delete-form">
   {% csrf_token %}
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
-    <h4 class="modal-title">Update {{obj}}</h4>
+    <h4 class="modal-title">Confirm {{obj}} deletion</h4>
   </div>
   <div class="modal-body">
-    {% include 'objects/form.html' %}
+    <p class="lead">Are you sure you want to delete the {{obj}} <strong>{{ event.title }}</strong>?</p>
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-    <button type="button" class="btn btn-default" data-dismiss="modal">Delete</button>
-    <button type="submit" class="btn btn-primary">Update {{obj}}</button>
+    <button type="submit" class="btn btn-danger">Delete {{obj}}</button>
   </div>
 </form>
