Extend AJAX CRUD operations to employees and locations apps

--- a/employees/templates/employees/employee_list_ajax.html
+++ b/employees/templates/employees/employee_list_ajax.html
@@ -1,26 +1,9 @@
 {% load staticfiles %}
-
-<table class="table table-striped table-hover" id='object-table'>
-  
-  <thead>
-    <tr class='header'>
-      <th scope="col"></th>
-      <th scope="col">ID</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Phone</th>
-      <th scope="col">Food</th>
-      <th scope="col">Alcohol</th>
-      <th scope="col">Admin</th>
-      <th scope="col">Active</th>
-    </tr>
-  </thead>
-  
   <tbody>
   {% for employee in employees %}
     <tr>
-      <td scope="row">
-        <button type="button" class="btn btn-danger btn-sm js-delete-object" data-url="{% url 'employee_delete' employee.id %}">Delete</button>
+      <td scope="row">         
+        <button type="button" class="btn btn-danger btn-sm js-delete-object" data-url="{% url 'employee_delete' employee.id %}">Delete
         <button type="button" class="btn js-update-object" data-url="{% url 'employee_update' employee.id %}"><img class='icon-edit 'src='{% static "events/img/edit.svg" %}' alt="Edit Icon"/></button>
       </td>
       <td>{{employee.employee_id}}</td>
@@ -34,5 +17,3 @@
     </tr>
   {% endfor %}
   </tbody>
-
-</table>
