--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -23,13 +23,9 @@
     {% for event in event_category.list %}
       <tr>
         <td scope="row">
-          <button type="button"
-              class="btn btn-danger btn-sm js-delete-object"
-              data-url="{% url 'event_delete' event.id %}">
-        <span class="glyphicon glyphicon-trash"></span> Delete
-          <button type="button" class="btn js-update-object" data-url="{% url 'event_update' event.id %}">
-            <img class='icon-edit 'src='{% static "events/img/edit.svg" %}' alt="Edit Icon"/>
-          </button>
+          
+          <button type="button" class="btn btn-danger btn-sm js-delete-object" data-url="{% url 'event_delete' event.id %}">Delete</button>
+          <button type="button" class="btn js-update-object" data-url="{% url 'event_update' event.id %}"><img class='icon-edit 'src='{% static "events/img/edit.svg" %}' alt="Edit Icon"/></button>
         </td>
         <td><a href='/events/{{event.date|date:"Y/m/d/"}}{{event.slug}}'>{{event}}</a><br /></td>
         <td>{{event.date}}</td>
