--- a/templates/objects/delete.html
+++ b/templates/objects/delete.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<form method="post" action="{% url obj|add:'_delete' event.id %}" class="js-object-delete-form">
+<form method="post" action="{% url obj|add:'_delete' object.id %}" class="js-object-delete-form">
   {% csrf_token %}
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -9,7 +9,7 @@
     <h4 class="modal-title">Confirm {{obj}} deletion</h4>
   </div>
   <div class="modal-body">
-    <p class="lead">Are you sure you want to delete the {{obj}} <strong>{{ event.title }}</strong>?</p>
+    <p class="lead">Are you sure you want to delete the {{obj}} <strong>Hello</strong>?</p>
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
