--- a/templates/objects/list.html
+++ b/templates/objects/list.html
@@ -10,7 +10,7 @@
           
           <h2>
             <span class='title'>{{objs}}</span>
-            <button type="button" class="btn add-object js-create-object" data-url="{% url 'event_create' %}"><a>+</a></button>
+            <button type="button" class="btn add-object js-create-object" data-url="{% url obj|add:'_create' %}" id="{{obj}}"><a>+</a></button>
             <div class='icon-export'><img src='{% static "events/img/export.svg" %}' alt="Export Icon" /></div>
           </h2>
           
@@ -20,7 +20,7 @@
             </div>
           </div>
           
-          {% include 'events/event_list.html' %}
+          {% include objs|add:'/'|add:obj|add:'_list.html' %}
 
         </div>
       </div>
